--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -8,19 +8,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['televisores']">Televisores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['ropa']">Ropa</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['ordenadores']">PC Gaming</a>
-          </li>
-         
+          <li class="nav-item" *ngFor="let ruta of rutas; let i = index">
+            <a class="nav-link" [routerLink]= "[ruta.url]" > {{ruta.nombre}} </a>
+          </li>         
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
